Commit the disappointing LSTM attempt, at least I learned how they work...

--- a/makemore/lecture2.ipynb
+++ b/makemore/lecture2.ipynb
@@ -167,7 +167,7 @@
     "    # Forward pass\n",
     "    emb = C[Xb]\n",
     "    embcat = emb.view(emb.shape[0], -1)\n",
-    "    hpreact = torch.tanh(embcat @ W1 + b1)\n",
+    "    hpreact = embcat @ W1 + b1\n",
     "    h = torch.tanh(hpreact)\n",
     "    logits = h @ W2 + b2\n",
     "    loss = F.cross_entropy(logits, Yb)\n",
